<resources>
    <string name="permlab_read_settings">Read Car Widget settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows an application to read the settings and shortcuts in Car Widget.</string>
    <string name="permlab_write_settings">write Car Widget settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows an application to change the settings and shortcuts in Car Widget.</string>
    <string name="color_dialog_title">Pick a color</string>
    <string name="pref_tile_color_title">Tile color</string>
    <string name="pref_bg_color_title">Background color</string>
    <string name="pref_icons_mono_title">Monochrome icons</string>
    <string name="pref_tint_color_title">Tint color</string>
    <string name="pref_tint_color_summary">Select tint color of icons</string>
    <string name="pref_font_color_title">Font color</string>
    <string name="pref_font_color_summary">Select color of title</string>
    <string name="pref_font_size_title">Font size</string>
    <string name="pref_font_size_summary">Select size of title</string>
    <string name="dialog_donate_title_expired">Trial expired,</string>
    <string name="dialog_donate_message_expired">This feature is available only in Car Widget Pro version.\n\n Would you like to get it now?</string>
    <string name="dialog_donate_title_trial">Trial,</string>
    <string name="dialog_donate_message_trial">\n\nUnlimited InCar mode is available only in Car Widget Pro version.\n\n Would you like to get it now?</string>
    <string name="dialog_donate_title_install">Pro version detected,</string>
    <string name="dialog_donate_message_installed">Please add the new installed widget to the home screen in order to get access to the features of Pro version.\n\nCopy settings:\nYou can copy settings using \"Backup/Restore\" option. Free version of the widget is not required anymore.\n\nThank you.</string>
    <string name="dialog_donate_btn_trial">Continue trial</string>
    <string name="dialog_donate_btn_yes">Yes, please!</string>
    <string name="dialog_donate_btn_no">No, thanks</string>
    <string name="set_shortcut">Set shortcut</string>
    <string name="pref_look_and_feel_title">Look &amp; Feel</string>
    <string name="pref_look_and_feel_summary">Customize skin, colors and font size</string>
    <string name="pref_incar_mode_title">InCar mode</string>
    <string name="pref_incar_mode_summary">Choose how to detect when you in car, and settings that will be adjusted</string>
    <string name="pref_incar_mode_enabled">Enable InCar mode</string>
    <string name="pref_power_contorl_bt">Power control Bluetooth</string>
    <string name="pref_power_plugged_bt_on_title">On when plugged</string>
    <string name="pref_power_plugged_bt_on_summary">Switch Bluetooth On when power cable plugged in</string>
    <string name="pref_power_unplugged_bt_off_title">Off when unplugged</string>
    <string name="pref_power_unplugged_bt_off_summary">Switch Bluetooth Off when power cable unplugged in</string>
    <string name="pref_detection">Trigger</string>
    <string name="pref_blutooth_device_title">Bluetooth device</string>
    <string name="pref_blutooth_device_summary">Choose bluetooth device which enable InCar mode</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="turn_on_bluetooth_summary">Turn on Bluetooth</string>
    <string name="bluetooth_device_category_title">Enable InCar mode when connecting to:</string>
    <string name="no_paired_devices_found_summary">Before a device can be selected, it needs to be paired and Bluetooth has to be enabled</string>
    <string name="pref_headset_connected_title">Headset connected</string>
    <string name="pref_headset_connected_summary">Enable InCar mode when audio jack connected</string>
    <string name="pref_power_connected_title">Power connected</string>
    <string name="pref_power_connected_summary">Enable InCar mode when power cable connected</string>
    <string name="pref_screen_timeout">Keep screen On</string>
    <string name="pref_screen_timeout_summary">When checked, prevents screen from automatically turning off</string>
    <string name="pref_brightness_mode">Brightness mode</string>
    <string name="pref_brightness_mode_summary">Select how to adjust brightness setting</string>
    <string name="pref_change_media_volume">Adjust volume</string>
    <string name="pref_change_media_volume_summary">Change volume to the certain level</string>
    <string name="pref_media_volume_level">Media level</string>
    <string name="pref_volume_level_summary">Change desired level of volume</string>
    <string name="pref_phone_volume_level">Call level</string>
    <string name="notif_expired">Trial expired</string>
    <string name="notif_consider">Consider to install Pro version</string>
    <string name="incar_mode_enabled">InCar mode</string>
    <string name="click_to_disable">Click to disable</string>
    <string name="click_to_disable_trial">Click to disable, Trial: %d times left</string>
    <plurals name="notif_activations_left">
        <item quantity="one">%1$d activation left</item>
        <item quantity="other">%1$d activations left</item>
    </plurals>
    <string name="version_title">%1$s ver. %2$s</string>
    <string name="version_summary">Rate this widget in the Play Store</string>
    <string name="shortcut_edit_title">Edit shortcut</string>
    <string name="shortcut_edit_hint">Touch the icon to change it</string>
    <string name="photo_picker_not_found">No pictures are available on the phone.</string>
    <string name="error_text">Error: %1$s</string>
    <string name="pref_route_to_speaker">Route to speaker</string>
    <string name="pref_route_to_speaker_summary">Route all incoming calls to phones speaker</string>
    <string name="pref_scale_icon">Scale icon</string>
    <string name="pref_wifi_summary">If Wi-Fi is On, you can temporary or permanently turn it off</string>
    <string name="pref_settings_transparent">Settings button</string>
    <string name="pref_settings_transparent_summary">Settings button will remain on the same place, but will become transparent</string>
    <string name="pref_incar_transparent">InCar button</string>
    <string name="pref_incar_transparent_summary">When InCar mode enabled, the button will stay on the same place, but will be transparent</string>
    <string name="pref_activate_car_mode">Built-in Car Mode</string>
    <string name="pref_activate_car_mode_summary">Android built-in car mode will be activated, additional notification icon will be shown.</string>
    <string name="pref_backup_title">Backup / Restore</string>
    <string name="pref_backup_summary">Backup settings of the widget</string>
    <string name="backup_current_widget">Current widget</string>
    <string name="backup_incar_settings">InCar settings</string>
    <string name="backup_name_title">Backup name:</string>
    <string name="backup_name_summary">Please define name to identify backup of current the widget</string>
    <string name="backup_done">Backup is done.</string>
    <string name="external_storage_not_available">External storage is not available.</string>
    <string name="failed_to_write_file">Failed to write the file.</string>
    <string name="restore_done">Restore is done.</string>
    <string name="restore_deserialize_failed">Failed to deserialize backup.</string>
    <string name="failed_to_read_file">Failed to read the file.</string>
    <string name="backup_not_exist">Backup file is not exists.</string>
    <string name="unable_delete_file">Unable to delete file.</string>
    <string name="no_backup_files_found">No backup files were found.</string>
    <string name="pref_auto_answer">Auto Answer</string>
    <string name="pref_auto_answer_summary">Auto answer to incoming calls immediately or with 5 seconds delay. (Experimental)</string>
    <string name="pref_autorun_app_title">App Autorun</string>
    <string name="switch_in_car_activity">Switch InCar</string>
    <string name="incar_mode_disabled">InCar mode disabled.\nEnable it in widget settings in order to use shortcut.</string>
    <string name="set_shortcut_short">SET</string>
    <string name="notification">Notification</string>
    <string name="shortcuts_summary">You can place up to 3 shortcuts in status bar</string>
    <string name="icons_theme">Icons Theme</string>
    <string name="not_set">Not set</string>
    <string name="default_car_dock_app">Default Car Dock app</string>
    <string name="cardock_btn_1">Open App Info</string>
    <string name="cardock_text1">To clear current default application:\n1. Open default App Info\n2. Click on \"Clear defaults\" button</string>
    <string name="cardock_text2">Next time Car Dock enabled, choose \"Car Widget\" as a default application.</string>
    <string name="select_shortcut_title">Select shortcut</string>
    <string name="select_icon_pack">Select icon pack</string>
    <string name="custom_image_error">An error was encountered while trying to open the selected image</string>
    <string name="pref_rotate_icon_title">Rotate icons</string>
    <string name="pref_titles_hide_title">Hide titles</string>
    <string name="pref_titles_hide_summary">Do not display titles for the shortcuts</string>
    <string name="not_active">Not active</string>
    <string name="active">Active</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_text"><![CDATA[<b>Car Widget</b> makes easier and quicker access to phone features when you\'re in the car.]]></string>
    <string name="install_a_widget">Install a widget</string>
    <string name="install_widget"><![CDATA[Go to <b>home screen</b> &gt; <b>touche & hold</b> to show menu &gt; choose <b>widgets</b> &gt; find <b>Car Widget</b> and put it on available screen.]]></string>
    <string name="configure_text"><![CDATA[Inside settings of the widget you can define <b>shortcuts</b>, configure its look by changing <b>skin</b> and applying <b>effects</b>]]></string>
    <string name="open_settings_description"><![CDATA[Press <b>Settings</b> button in order to open configuration screen]]></string>
    <string name="incar_mode">InCar mode</string>
    <string name="detect_incar_description"><![CDATA[<b>Detects</b> when you\'re inside the car]]></string>
    <string name="adjust_incar_description"><![CDATA[<b>Adjust</b> common settings]]></string>
    <string name="enable_incar_description"><![CDATA[<b>Enable</b> InCar mode in the settings dialog.]]></string>
    <string name="trial_description">Free version trial for %d activations.</string>
    <string name="swipe_continue">Swipe to continue →</string>
    <string name="gms_service_missing">Google Play services is missing on this device.</string>
    <string name="activity_recognition">Activity recognition</string>
    <string name="shortcuts">Notification shortcuts</string>
    <string name="pref_actions">Actions</string>
    <string name="information_title">Information</string>
    <string name="issue_title">Feedback</string>
    <string name="restore">Restore</string>
    <string name="settings">Settings</string>
    <string name="more">More...</string>
    <string name="export_backup">Upload backup file</string>
    <string name="delete">Delete</string>
    <string name="car_dock">Car Dock</string>
    <string name="car_dock_summary">Enable InCar mode when phone is docked into car dock</string>
    <string name="widgets">Widgets</string>
    <string name="music_app">Music App</string>
    <string name="app_theme">App Theme</string>
    <string name="list_of_active_widgets">List of active widgets</string>
    <string name="shortcuts_and_look"><![CDATA[Shortcuts & Look]]></string>
    <string name="shortcuts_and_look_summary">Customize shortcuts, skin and font size</string>
    <string name="current_widget">Current widget</string>
    <string name="general">General</string>
    <string name="app_preferences">App Preferences</string>
</resources>