<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:summary="@string/pref_incar_mode_summary"
    android:title="@string/pref_incar_mode_title"
    android:layout="@layout/preference_list_fragment">

    <android.support.v7.preference.SwitchPreferenceCompat
        android:key="incar-mode-enabled"
        android:title="@string/pref_incar_mode_enabled" />

    <PreferenceCategory
        android:title="@string/pref_detection">
        <Preference
            android:key="bt-device-screen"
            android:summary="@string/pref_blutooth_device_summary"
            android:title="@string/pref_blutooth_device_title" />

        <CheckBoxPreference
            android:key="headset-required"
            android:summary="@string/pref_headset_connected_summary"
            android:title="@string/pref_headset_connected_title" />
        <CheckBoxPreference
            android:key="power-required"
            android:summary="@string/pref_power_connected_summary"
            android:title="@string/pref_power_connected_title" />
        <CheckBoxPreference
            android:key="activity-recognition"
            android:summary="@string/gms_service_missing"
            android:title="@string/activity_recognition"

            />
        <CheckBoxPreference
            android:key="car-dock"
            android:summary="@string/car_dock_summary"
            android:title="@string/car_dock" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_actions">
        <ListPreference
            android:defaultValue="enabled"
            android:entries="@array/disable_screen_timeout"
            android:entryValues="@array/disable_screen_timeout_values"
            android:key="screen-timeout-list"
            android:summary="@string/pref_screen_timeout_summary"
            android:title="@string/pref_screen_timeout" />

        <ListPreference
            android:defaultValue="disabled"
            android:entries="@array/brightness_mode_titles"
            android:entryValues="@array/brightness_mode_values"
            android:key="brightness"
            android:summary="@string/pref_brightness_mode_summary"
            android:title="@string/pref_brightness_mode" />

        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/orientation_titles"
            android:entryValues="@array/orientation_values"
            android:key="screen-orientation"
            android:summary="Force any app into orientation. Notice: not all apps can work correctly"
            android:title="Screen Orientation" />

        <CheckBoxPreference
            android:key="bluetooth"
            android:title="@string/turn_on_bluetooth_summary" />
        <CheckBoxPreference
            android:key="auto_speaker"
            android:summary="@string/pref_route_to_speaker_summary"
            android:title="@string/pref_route_to_speaker" />

        <ListPreference
            android:defaultValue="disabled"
            android:entries="@array/autoanswer_titles"
            android:entryValues="@array/autoanswer_values"
            android:key="auto_answer"
            android:summary="@string/pref_auto_answer_summary"
            android:title="@string/pref_auto_answer" />

        <Preference
            android:fragment="com.anod.car.home.prefs.ConfigurationInCarVolume"
            android:key="media-screen"
            android:summary="@string/pref_change_media_volume_summary"
            android:title="@string/pref_change_media_volume"/>

        <Preference
            android:fragment="com.anod.car.home.prefs.ConfigurationInCarMore"
            android:key="more-screen"
            android:title="@string/more"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_power_contorl_bt">
        <CheckBoxPreference
            android:key="power-bt-enable"
            android:summary="@string/pref_power_plugged_bt_on_summary"
            android:title="@string/pref_power_plugged_bt_on_title" />

        <CheckBoxPreference
            android:key="power-bt-disable"
            android:summary="@string/pref_power_unplugged_bt_off_summary"
            android:title="@string/pref_power_unplugged_bt_off_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notification">
        <Preference
            android:fragment="com.anod.car.home.prefs.ConfigurationNotifShortcuts"
            android:key="notif-shortcuts"
            android:summary="@string/shortcuts_summary"
            android:title="@string/shortcuts" />
    </PreferenceCategory>
</PreferenceScreen>