<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_current_widget_group" android:title="@string/current_widget">
        <menu>
            <item
                android:id="@+id/nav_current_widget"
                android:icon="@drawable/ic_now_widgets_white_24dp"
                android:title="@string/shortcuts_and_look"
                android:tooltipText="@string/shortcuts_and_look_summary" />
            <item
                android:id="@+id/nav_backup"
                android:icon="@drawable/ic_backup_white_24dp"
                android:title="@string/pref_backup_title"
                android:tooltipText="@string/pref_backup_summary" />
        </menu>
    </item>

    <item android:title="@string/general">
        <menu>
            <item
                android:id="@+id/nav_widgets"
                android:icon="@drawable/ic_now_widgets_white_24dp"
                android:title="@string/widgets"
                android:tooltipText="@string/list_of_active_widgets" />
            <!--  val incarSummary = context.getString(R.string.settings) + ". " + active -->
            <item
                android:id="@+id/nav_car_settings"
                android:icon="@drawable/ic_settings_white_24dp"
                android:title="@string/pref_incar_mode_title"
                android:tooltipText="@string/settings" />
        </menu>
    </item>

    <item android:title="@string/settings">
        <menu>
            <!--   val themeNameRes = AppTheme
    .getNameResource(App.get(context).themeIdx) -->
            <item
                android:id="@+id/nav_theme"
                android:icon="@drawable/ic_invert_colors_on_white_24dp"
                android:title="@string/app_theme"/>
            <!-- renderMusicApp() -->
            <item
                android:id="@+id/nav_music_app"
                android:icon="@drawable/ic_headset_white_24dp"
                android:title="@string/music_app" />
            <!-- renderCarDockApp() -->
            <item
                android:id="@+id/nav_car_dock_app"
                android:icon="@drawable/ic_android_white_24dp"
                android:title="@string/default_car_dock_app" />
        </menu>
    </item>


    <item android:title="@string/information_title">
        <menu>
            <!-- renderVersion -->
            <item
                android:id="@+id/nav_version"
                android:icon="@drawable/ic_stars_white_24dp"
                android:title="@string/version_summary"/>
            <!-- renderMusicApp() -->
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_email_black_24dp"
                android:title="@string/issue_title" />
        </menu>
    </item>

</menu>