<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:key="shortcuts" android:title="@string/shortcuts" android:layout="@layout/pref_category"></PreferenceCategory>
    <PreferenceCategory android:title="@string/advanced" android:layout="@layout/pref_category" android:key="advanced-category">
        <com.anod.car.home.prefs.views.HeaderPreference
            android:icon="@drawable/ic_action_brush"
            android:key="look-and-feel"
            android:summary="@string/pref_look_and_feel_summary"
            android:title="@string/pref_look_and_feel_title"
		/>
        <com.anod.car.home.prefs.views.HeaderPreference
            android:icon="@drawable/ic_action_wheel"
            android:key="incar"
            android:summary="@string/pref_incar_mode_summary"
            android:title="@string/pref_incar_mode_title"
			android:fragment="com.anod.car.home.prefs.ConfigurationInCar"
			/>
        <com.anod.car.home.prefs.views.HeaderPreference
            android:icon="@drawable/ic_action_export"
            android:key="backup"
            android:summary="@string/pref_backup_summary"
            android:title="@string/pref_backup_title"
		/>

    </PreferenceCategory>
</PreferenceScreen>