
<menu
		xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/tile_color"
        app:showAsAction="always"
        android:title="@string/pref_tile_color_title">
    </item>
	<item
			android:id="@+id/apply"
			android:icon="@drawable/ic_action_tick"
            app:showAsAction="always"
			android:title="@android:string/ok">
	</item>
	<item
			android:id="@+id/overflow"
			android:icon="@drawable/ic_action_overflow"
            app:showAsAction="always"
			android:title="@string/menu">
		<menu>
			<item
					android:id="@+id/bg_color"
                    app:showAsAction="never"
					android:title="@string/pref_bg_color_title">
			</item>
			<item
					android:id="@+id/icons_theme"
                    app:showAsAction="never"
					android:title="@string/icons_theme">
			</item>
			<item
					android:id="@+id/icons_mono"
					android:checkable="true"
					android:checked="false"
                    app:showAsAction="never"
					android:title="@string/pref_icons_mono_title">
			</item>
			<item
					android:id="@+id/icons_scale"
                    app:showAsAction="never"
					android:title="@string/pref_scale_icon">
			</item>
			<item
					android:id="@+id/more"
                    app:showAsAction="never"
					android:title="@string/more">
			</item>
		</menu>
	</item>


</menu>