<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
			android:layout_height="match_parent"
		>

    <LinearLayout
			  android:orientation="vertical"
			  android:layout_width="match_parent"
			  android:layout_height="wrap_content"
			  android:padding="12dp"
		>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="?attr/panelHeader"
			android:orientation="vertical"
			android:id="@+id/widgets">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="@style/panelHeaderText"
			android:text="@string/home_screen_widgets"
		/>

		<TextView
			android:text="@string/no_active_widgets_were_found"
			android:id="@+id/widgetsActive"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textColor="@color/font_color_sec"/>
	</LinearLayout>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="?attr/panelHeader"
			android:id="@+id/incarHeader"
			android:layout_marginTop="@dimen/panel_header_margin"
			android:orientation="vertical"
	>

		<TextView
				android:id="@+id/incarTitle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="@style/panelHeaderText"
				android:text="@string/pref_incar_mode_title"
		/>

		<TextView
				android:text="@string/dialog_donate_title_trial"
				android:id="@+id/incarTrial"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white"
                android:background="@drawable/badge"/>


	</LinearLayout>

    <com.anod.car.home.ui.views.TwoLineButton
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?attr/panelItem"
        android:layout_marginTop="1dp"
        android:id="@+id/incarSettings"
        app:title_text="@string/settings"
        app:icon_src="@drawable/ic_holo_settings"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?attr/panelHeader"
        android:layout_marginTop="@dimen/panel_header_margin"
        android:text="@string/system"
        />

    <com.anod.car.home.ui.views.TwoLineButton
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?attr/panelItem"
        android:layout_marginTop="1dp"
        android:id="@+id/defaultApp"
        app:title_text="@string/default_car_dock_app"
        app:summary_text="@string/not_set"
        app:icon_src="@drawable/ic_settings_applications"/>

    <com.anod.car.home.ui.views.TwoLineButton
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?attr/panelItem"
        android:layout_marginTop="1dp"
        android:id="@+id/appTheme"
        app:title_text="App Theme"
        app:summary_text="Dark"
        app:icon_src="@drawable/ic_action_contrast"/>

    <com.anod.car.home.ui.views.TwoLineButton
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?attr/panelItem"
        android:layout_marginTop="1dp"
        android:id="@+id/musicApp"
        app:title_text="@string/music_app"
        app:summary_text="List"
        app:icon_src="@drawable/ic_action_headphones"/>


	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		style="?attr/panelHeader"
		android:layout_marginTop="@dimen/panel_header_margin"
		android:text="@string/information_title"
		android:id="@+id/textView5"
	/>

    <com.anod.car.home.ui.views.TwoLineButton
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?attr/panelItem"
        android:layout_marginTop="1dp"
        android:id="@+id/version"
        app:title_text="@string/version_title"
        app:summary_text="@string/version_summary"
        app:icon_src="@drawable/ic_action_star_10"/>

    <com.anod.car.home.ui.views.TwoLineButton
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?attr/panelItem"
        android:layout_marginTop="1dp"
        android:id="@+id/feedback"
        app:title_text="@string/issue_title"
        app:icon_src="@drawable/ic_action_gplus"/>

</LinearLayout>
</ScrollView>