<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="?attr/panelItem"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:minHeight="?android:attr/listPreferredItemHeight"
    android:paddingBottom="2dp"
    android:paddingRight="4dp"
    android:paddingLeft="4dp"
    android:paddingTop="2dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dip"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@android:id/title"
            style="@style/textAlignStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:maxLines="1"
            android:text="@string/backup_name_title"
            android:textAppearance="@style/panelHeaderText" />

        <TextView
            android:id="@android:id/text2"
            style="@style/textAlignStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:maxLines="1"
            android:text="@string/backup_name_summary"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <ImageView
        android:id="@+id/apply_icon"
        style="@android:style/Widget.ActionButton"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/restore"
        android:gravity="center"
        android:scaleType="center"
        android:src="@drawable/ic_action_tick" />

    <ImageView
        android:id="@+id/uploadMain"
        style="@android:style/Widget.ActionButton"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/export_backup"
        android:gravity="center"
        android:scaleType="center"
        android:src="@drawable/ic_action_xhdpi_ul_to_cloud" />


    <ImageView
        android:id="@+id/delete_button"
        style="@android:style/Widget.ActionButton"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/delete"
        android:gravity="center"
        android:scaleType="center"
        android:src="@drawable/ic_action_cancel" />

</LinearLayout>